SONAR-22728  Increase max metric in Component Tree Action